deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mega-deployment
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mega-service-app
  template:
    metadata:
      labels:
        app: mega-service-app
    spec:
      containers:
        - name: otustaining
          image: belousov2501/otus_training:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10 
            periodSeconds: 5
