service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mega-service
spec:
  selector:
    app: mega-service-app
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 8000
  type: LoadBalancer
